[package]
name = "mdbook-include-md"
version = "0.1.0"
edition = "2021"

[dependencies]
mdbook = "0.4.51"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

log = "0.4"
env_logger = "0.11"

# cargo build --release --manifest-path src/mdbook-include-md/Cargo.toml --target-dir ./target/preprocessors
# cargo build --release --target-dir ./target/preprocessors
# cargo build --release 